# yamabros

./: CMakeLists.txt  README.md  package.xml  readme.txt  setup.py
action/: Command.action
config/: m1_costmap_common.yaml  yamabico.rviz
config/yamabico/: costmap_common.yaml
doc/: Demopro2015.odp  Logo.xcf  Notes Demopro 2015.txt  Notes.txt
include/yamabros/: robot.h  settings.h  spur.h  yamabros.h
include/yamabros/spur/: actions.h  actions_move_base.h  actions_ros.h  actions_ypspur.h  conditions.h  constants.h  coordinator.h  server.h  topics.h  topics_ypspur.h
launch/: gazebo.launch  kadai01_control.launch  kadai01_gazebo.launch  kadai01_rviz.launch  laser_frame.launch  m1.launch  m1_control.launch  move_base.launch  rviz.launch  spur_coordinator_debug.launch  spur_server_ros.launch  urg.launch  yamabico.launch  yamabico_m1.launch  ypspur_ros.launch
models/yamasemi_pole/: model-1_4.sdf  model.config
models/yamasemi_wall/: model-1_4.sdf  model.config
msg/: Pose.msg
rviz/: kadai01.rviz  urg.rviz
src/: kadai01_2015.cpp  settings.cpp  spur.cpp  spur_coordinator.cpp  spur_server.cpp
src/spur/: actions.cpp  actions_ros.cpp  conditions.cpp  coordinator.cpp  server.cpp  topics.cpp  topics_ypspur.cpp
src/yamabros/: __init__.py  hokuyo.py  robot.cpp  settings.cpp  spur.cpp  topic.py
src/yamabros/spur/: __init__.py  actions_move_base.cpp  actions_ros.cpp  actions_ypspur.cpp  constants.cpp  server.cpp
worlds/: camera.world  gas_station.world  hokuyo.world  kadai01.world  kadai01_2015.world  pioneer2dx_ros.world
